fixed spacing issue

--- a/src/App.css
+++ b/src/App.css
@@ -809,7 +809,7 @@ input[type="checkbox"] {
 .cards-2 {
     position: relative;
     padding-top: 6rem;
-    padding-bottom: 10rem;
+    padding-bottom: 8rem;
     margin-bottom: -2rem;
     background: linear-gradient(#032280,#032280), url("./images/pricing-background.jpg") center center no-repeat;
     background-size: cover;
